--- a/src/app/page/festival-care-detail/poster-model/poster-model.component.html
+++ b/src/app/page/festival-care-detail/poster-model/poster-model.component.html
@@ -1,12 +1,12 @@
 <div>
-  <div class="am-modal-mask" [style.top]="showModel ? '0' : '100vh'"></div>
-  <div class="am-modal-wrap" [style.top]="showModel ? '0' : '100vh'">
+  <div class="modal-mask" [style.top]="showModel ? '0' : '100vh'"></div>
+  <div class="modal-wrap" [style.top]="showModel ? '0' : '100vh'">
     <div
-      class="am-modal poster-generate-modal"
+      class="modal poster-generate-modal"
       style="width: calc(100% - 0.6rem); height: auto"
     >
-      <div class="am-modal-content">
-        <div class="am-modal-body">
+      <div class="modal-content">
+        <div class="modal-body">
           <div class="poster-grid-wrap">
             <div class="single-img-wrap">
               <a>
