--- a/src/app/page/festival-care-detail/text-edit/text-edit.component.html
+++ b/src/app/page/festival-care-detail/text-edit/text-edit.component.html
@@ -13,7 +13,7 @@
           (click)="getInfo(i)"
           [attr.data-btn]="i"
         >
-          {{ item.name }}
+          {{ item.labelNm }}
         </div>
       </div>
     </div>
