--- a/src/app/components/share/share.component.html
+++ b/src/app/components/share/share.component.html
@@ -14,11 +14,17 @@
       >
       <div class="btn-group">
         <div class="btn">
-          <img src="../../../assets/image/qw-icon.png" />
+          <img
+            src="../../../assets/image/qw-icon.png"
+            (click)="share('FORWARD')"
+          />
           <span>转发</span>
         </div>
         <div class="btn">
-          <img src="../../../assets/image/wx-icon.png" />
+          <img
+            src="../../../assets/image/wx-icon.png"
+            (click)="share('WECHAT')"
+          />
           <span>微信好友</span>
         </div>
       </div>
