--- a/src/app/page/festival-care-detail/poster-model/poster-model.component.css
+++ b/src/app/page/festival-care-detail/poster-model/poster-model.component.css
@@ -1,4 +1,4 @@
-.am-modal-mask {
+.modal-mask {
   position: fixed;
   top: 0;
   right: 0;
@@ -9,7 +9,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   transition: top 0.25s ease-in-out;
 }
-.am-modal-wrap {
+.modal-wrap {
   position: fixed;
   overflow: auto;
   top: 0;
@@ -26,21 +26,21 @@
   transform: translateZ(1px);
   transition: top 0.25s ease-in-out;
 }
-.poster-generate-modal .am-modal-content {
+.poster-generate-modal .modal-content {
   overflow: unset;
   background-color: transparent;
 }
-.poster-generate-modal .am-modal-content .am-modal-body {
+.poster-generate-modal .modal-content .modal-body {
   position: relative;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .modal-close-icon {
+.poster-generate-modal .modal-content .modal-body .modal-close-icon {
   position: absolute;
   left: calc(50% - 0.3rem);
   bottom: -1rem;
   font-size: 0.6rem;
   color: #fff;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap {
+.poster-generate-modal .modal-content .modal-body .poster-grid-wrap {
   padding: 0.3rem;
   display: flex;
   flex-wrap: wrap;
@@ -48,10 +48,19 @@
   user-select: none !important;
   background-color: #fff;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .single-img-wrap {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .single-img-wrap {
   width: 100%;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .single-img-wrap a {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .single-img-wrap
+  a {
   position: relative;
   display: inline-block;
   width: 100%;
@@ -60,24 +69,48 @@
   user-select: none;
   text-align: center;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .single-img-wrap a .loading {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .single-img-wrap
+  a
+  .loading {
   padding-top: 1rem;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .single-img-wrap a svg {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .single-img-wrap
+  a
+  svg {
   position: absolute;
   width: 0.46rem;
   height: 0.46rem;
   top: calc(50% - 0.23rem);
   left: calc(50% - 0.23rem);
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .single-img-wrap a img {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .single-img-wrap
+  a
+  img {
   max-width: 100%;
   max-height: 50vh;
   box-shadow: 0 0 0.1rem 0.05rem #ccc;
   pointer-events: auto !important;
   -webkit-touch-callout: none;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .single-img-wrap a .fail {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .single-img-wrap
+  a
+  .fail {
   position: absolute;
   left: 0;
   right: 0;
@@ -85,34 +118,68 @@
   font-size: 0.24rem;
   color: #aaa;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .tips-content {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .tips-content {
   width: 100%;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .tips-content .tips-top > p {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .tips-content
+  .tips-top
+  > p {
   margin-top: 0.2rem;
   font-size: 0.32rem;
   text-align: center;
   color: #3078db;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .tips-content .tips-top > p:nth-child(2) {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .tips-content
+  .tips-top
+  > p:nth-child(2) {
   margin-top: 0.1rem;
   font-size: 0.24rem;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .tips-content .tips {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .tips-content
+  .tips {
   margin-top: 0.3rem;
   font-size: 0.24rem;
   text-align: left;
   line-height: 0.36rem;
   color: #999;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .tips-content .tips .tips-icon {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .tips-content
+  .tips
+  .tips-icon {
   position: relative;
   display: inline-block;
   padding-left: 0.36rem;
   margin-bottom: 0.05rem;
   color: #111;
 }
-.poster-generate-modal .am-modal-content .am-modal-body .poster-grid-wrap .tips-content .tips .tips-icon img {
+.poster-generate-modal
+  .modal-content
+  .modal-body
+  .poster-grid-wrap
+  .tips-content
+  .tips
+  .tips-icon
+  img {
   position: absolute;
   left: 0;
   top: -0.02rem;
