--- a/src/app/page/festival-care-preview/festival-care-preview.html
+++ b/src/app/page/festival-care-preview/festival-care-preview.html
@@ -12,10 +12,10 @@
     >
       <img class="corpLogo" [src]="detail.logoUrl" />
     </div>
-    <app-text-layout
+    <festival-text-layout
       [texts]="detail.texts"
       [layoutType]="detail.layoutType"
       [style]="style"
-    ></app-text-layout>
+    ></festival-text-layout>
   </div>
 </div>
