--- a/src/app/page/festival-care-detail/festival-care-detail.html
+++ b/src/app/page/festival-care-detail/festival-care-detail.html
@@ -3,8 +3,8 @@
   [style]="isEditing || isFirstEnter ? style : {}"
   *ngIf="detail?.isOpen"
 >
-  <app-header [reason]="detail?.reason"></app-header>
-  <app-container
+  <festival-header [reason]="detail?.reason"></festival-header>
+  <festival-container
     [detail]="detail"
     [isEditing]="isEditing"
     [isIphoneX]="isIphoneX"
@@ -13,18 +13,18 @@
     (editEvent)="onEdit()"
     (setSceneStyle)="setSceneStyle($event)"
     (setSceneText)="setSceneText($event)"
-  ></app-container>
-  <app-footer
+  ></festival-container>
+  <festival-footer
     *ngIf="!isEditing"
     (onEdit)="onEdit()"
     (onShare)="changeShare()"
     (onCreatePoster)="onCreatePoster()"
   >
-  </app-footer>
+  </festival-footer>
 </div>
 
 <!-- 编辑弹窗 -->
-<app-text-edit
+<festival-text-edit
   *ngIf="isEditing && detail && sceneStyle && sceneText"
   [layoutType]="sceneStyle.layoutType"
   [fontFamily]="sceneText.fontFamily"
@@ -32,36 +32,36 @@
   [customerInfo]="customerInfo"
   (onCancel)="onCancel()"
   (onSave)="onSave($event)"
-></app-text-edit>
+></festival-text-edit>
 
 <!-- 分享弹窗 -->
-<app-share
+<festival-share
   *ngIf="isShare"
   [isShare]="isShare"
   (onCancel)="changeShare()"
   (onShare)="onShare($event)"
-></app-share>
+></festival-share>
 
 <!-- 无数据 -->
-<app-no-data
+<festival-no-data
   *ngIf="(!detail?.isOpen && !isLoading) || !linkParameters['id']"
-></app-no-data>
+></festival-no-data>
 
 <!-- 首次进入提示 -->
-<app-tips [isFirstEnter]="isFirstEnter" (onCancel)="onCloseMask()"></app-tips>
+<festival-tips [isFirstEnter]="isFirstEnter" (onCancel)="onCloseMask()"></festival-tips>
 
 <!-- 海报用来生成图片 -->
-<app-html2canvas
+<festival-html2canvas
   [sceneStyle]="sceneStyle"
   [sceneText]="sceneText"
   [managerInfo]="managerInfo"
-></app-html2canvas>
+></festival-html2canvas>
 
 <!-- 海报弹框 -->
-<app-poster-model
+<festival-poster-model
   [showModel]="showModel"
   [grid]="grid"
   (close)="closeModel()"
   (touchStart)="touchStart()"
   (touchEnd)="touchEnd()"
-></app-poster-model>
+></festival-poster-model>
