新增第四种样式布局

--- a/src/app/page/festival-care-detail/container/container.component.css
+++ b/src/app/page/festival-care-detail/container/container.component.css
@@ -89,6 +89,9 @@
   line-height: 0;
   overflow: hidden;
 }
+.container .content .section2 .contentShortWrap {
+  height: calc(6.9 / 7.5 * 8rem);
+}
 .container .content .section2 .contentWrap .logoWrap {
   display: flex;
   justify-content: flex-start;
