--- a/src/app/page/festival-care-preview/festival-care-preview.css
+++ b/src/app/page/festival-care-preview/festival-care-preview.css
@@ -9,6 +9,9 @@
   line-height: 0;
   overflow: hidden;
 }
+.festival-care-preview .posterShortWrap {
+  height: 8rem;
+}
 .festival-care-preview .posterWrap .poster {
   width: 100%;
 }
