--- a/src/app/components/text-layout/text-layout.component.css
+++ b/src/app/components/text-layout/text-layout.component.css
@@ -60,3 +60,9 @@
   top: 10.3rem;
   height: 1.6rem;
 }
+.textLayout section.layout4 {
+  top: 1.6rem;
+  left: 0.8rem;
+  right: 0.8rem;
+  height: 5.4rem;
+}
