--- a/src/app/page/festival-care-detail/container/container.component.html
+++ b/src/app/page/festival-care-detail/container/container.component.html
@@ -35,6 +35,7 @@
 
       <div
         class="contentWrap"
+        [class]="sceneStyle.layoutType === 4 ? 'contentShortWrap' : ''"
         [style]="{
           backgroundColor: sceneStyle.backgroundColor
         }"
